--- a/Project.cabal
+++ b/Project.cabal
@@ -29,7 +29,7 @@ library
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
+    build-depends:    base ==4.*, ansi-terminal
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -42,7 +42,8 @@ executable Project
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:
-        base ^>=4.14.3.0,
+        base ==4.*,
+		--14.3.0
         Project,
         --gloss,
         --gloss-raster,
